watch_movies/force-app/main/default/objects/Movie__c/Movie__c.object-meta.xml
<CustomObject>
    <label>Movie</label>
    <nameField>
        <label>Movie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>