watch_movies/force-app/main/default/objects/Movie__c/fields/IMDB_ID__c.field-meta.xml
<CustomField>
    <fullName>IMDB_ID__c</fullName>
    <label>IMDB ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>