watch_movies/force-app/main/default/objects/Movie__c/fields/IMDB_Rating__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Rating__c</fullName>
    <label>IMDB Rating</label>
    <length>55</length>
    <type>Text</type>
</CustomField>