watch_movies/force-app/main/default/objects/Movie__c/fields/Is_Watch_Later__c.field-meta.xml
<CustomField>
    <fullName>Is_Watch_Later__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Watch Later</label>
    <type>Checkbox</type>
</CustomField>