watch_movies/force-app/main/default/objects/Movie__c/fields/Poster__c.field-meta.xml
<CustomField>
    <fullName>Poster__c</fullName>
    <label>Poster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>