watch_movies/force-app/main/default/objects/Movie__c/fields/Watch_Later__c.field-meta.xml
<CustomField>
    <fullName>Watch_Later__c</fullName>
    <label>Watch Later</label>
    <type>Date</type>
</CustomField>