watch_movies/force-app/main/default/objects/Movie__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>55</length>
    <type>Text</type>
</CustomField>